[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "*"
glium = "0.30.0"
legion = "0.3.1"
winit = "0.21"
egui_glium="0.14.0"
egui="0.14.0"
paste = "1.0.5"
shrev = "1.1.1"
itertools="0.10.1"
image = "0.23.14"
