[package]
name = "voxel_engine"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
pretty_env_logger = "*"
glium = "0.30.0"
legion = "0.3.1"
winit = "0.21"
image = "0.23.14"
egui_glium="0.13.1"
egui="0.13.1"
shrev = "1.1.1"
itertools="0.10.1"
crossbeam-channel="0.4.4"
paste = "1.0.5"
voxel_engine_app = { path = "../app", version = "0.1.0"}