[package]
name = "voxel_engine_runner"
version = "0.1.0"
authors = ["Chris Sampson <sammosampson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
notify = "4.0.0"
voxel_engine_app = { path = "../app", version = "0.1.0"}
